<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.austinmchau.simplettdice.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/output_label_default"
        android:id="@+id/outputLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/rollButtonLeft"
            android:id="@+id/rollButtonLeft" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/roll_button_text"
            android:id="@+id/rollButton"
            android:layout_weight="2" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/rollButtonRight"
            android:id="@+id/rollButtonRight" />

        <Spinner
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:id="@+id/typeOfDiceSpinner"
            android:entries="@array/dice_type_array"
            android:prompt="@string/dice_type_prompt"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.austinmchau.simplettdice.TableViewFragment"
        android:id="@+id/tableViewFragment"
        android:layout_below="@+id/outputLabel"
        android:layout_alignLeft="@+id/outputLabel"
        android:layout_alignStart="@+id/outputLabel"
        tools:layout="@layout/table_view_fragment"
        android:layout_above="@+id/linearLayout" />

</RelativeLayout>
